RESOLVED FIXED221080
REGRESSION (r271988): XRSession.end() promise is not resolved if PlatformXR::Device::supportsSessionShutdownNotification() returns false
https://bugs.webkit.org/show_bug.cgi?id=221080
Summary REGRESSION (r271988): XRSession.end() promise is not resolved if PlatformXR::...
Ada Chan
Reported 2021-01-27 21:53:07 PST
This is a regression from https://bugs.webkit.org/show_bug.cgi?id=220835. In that change, m_endPromise was saved after the call to WebXRSession::shutdown(InitiatedBySystem::No), but that call could result in WebXRSession::didCompleteShutdown() if the device returns false for supportsSessionShutdownNotification() and m_endPromise would still be null then. Not sure why xrSession_end.https.html did not time out like I've seen with xrSession_requestAnimationFrame_callback_calls.https.html.
Attachments
Patch (3.60 KB, patch)
2021-01-27 22:10 PST, Ada Chan
no flags
Ada Chan
Comment 1 2021-01-27 21:58:42 PST
Ada Chan
Comment 2 2021-01-27 22:10:20 PST
EWS
Comment 3 2021-01-28 08:32:55 PST
Committed r272014: <https://trac.webkit.org/changeset/272014> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418619 [details].
Radar WebKit Bug Importer
Comment 4 2021-01-28 08:33:14 PST
Note You need to log in before you can comment on or make changes to this bug.