REGRESSION (r271988): XRSession.end() promise is not resolved if PlatformXR::Device::supportsSessionShutdownNotification() returns false https://bugs.webkit.org/show_bug.cgi?id=221080

Patch by Ada Chan <ada.chan@apple.com> on 2021-01-28
Reviewed by Chris Dumez.

Source/WebCore:

m_endPromise needs to be set before WebXRSession::shutdown() is called
since that can call WebXRSession::didCompleteShutdown() which will
resolve m_endPromise.

This issue caused a timeout in the cleanup step for a test like
imported/w3c/web-platform-tests/webxr/xrSession_requestAnimationFrame_callback_calls.https.html.

* Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::end):

LayoutTests:

Enable a test that was timing out, but now passes with the bug fix.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/233439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272014 268f45cc-cd09-0410-ab3c-d52691b4dbfc